Fix Codacy issues